--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+<script type="text/javascript">document.body.style.zoom="90%"</script>
+
 <style type="text/css">
   .cardkpi{
     margin-top: 20px;
   }
   .contentkpi{
-    max-height: : vh;
+    max-height: :vh;
+    min-width: 300px
+    max-width:500px;
   }
+
+
 </style>
 
 <style>
@@ -122,8 +128,8 @@
             <div class="w3-container" style="background-color: transparent;">
               <div class="container">
                 <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright" style="color: gray; font-size: 40pt">&times;</span>
-                <img src="img/contentkpi/contentkpi-01.jpg"></img>
-                <img src="img/contentkpi/contentkpi-02.jpg"></img>
+                <img  class= "img-fluid" src="img/contentkpi/contentkpi-01.jpg"></img>
+                <img  class= "img-fluid" src="img/contentkpi/contentkpi-02.jpg"></img>
               </div>
             </div>
           </div>
@@ -141,8 +147,8 @@
             <div class="w3-container" style="background-color: transparent;">
               <div class="container">
                 <span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright" style="color: gray; font-size: 40pt">&times;</span>
-                <img src="img/contentkpi/contentkpi-11.jpg"></img>
-                <img src="img/contentkpi/contentkpi-12.jpg"></img>
+                <img  class= "img-fluid" src="img/contentkpi/contentkpi-11.jpg"></img>
+                <img  class= "img-fluid" src="img/contentkpi/contentkpi-12.jpg"></img>
               </div>
             </div>
           </div>
@@ -160,8 +166,8 @@
               <div class="w3-container" style="background-color: transparent;">
                 <div class="container">
                   <span onclick="document.getElementById('id03').style.display='none'" class="w3-button w3-display-topright" style="color: gray; font-size: 40pt">&times;</span>
-                  <img src="img/contentkpi/contentkpi-21.jpg"></img>
-                  <img src="img/contentkpi/contentkpi-22.jpg"></img>
+                  <img  class= "img-fluid" src="img/contentkpi/contentkpi-21.jpg"></img>
+                  <img  class= "img-fluid" src="img/contentkpi/contentkpi-22.jpg"></img>
                 </div>
               </div>
             </div>
@@ -176,10 +182,10 @@
           <div id="id04" class="w3-modal">
             <div class="w3-modal-content" style="background-color: transparent;">
               <div class="w3-container" style="background-color: transparent;">
-                <div class="container">
+                <div class="col-12">
                   <span onclick="document.getElementById('id04').style.display='none'" class="w3-button w3-display-topright" style="color: gray; font-size: 40pt">&times;</span>
-                  <img src="img/contentkpi/contentkpi-05.jpg"></img>
-                  <img src="img/contentkpi/contentkpi-06.jpg"></img>
+                  <img class= "img-fluid" src="img/contentkpi/contentkpi-05.jpg"></img>
+                  <img  class= "img-fluid" src="img/contentkpi/contentkpi-06.jpg"></img>
                 </div>
               </div>
             </div>
